--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -1,7 +1,8 @@
 :root {
   --master-bg-color: rgb(252, 234, 220);
   --master-deep-bg-color: #c76591;
-  --master-text-color: #634f47;
+  --master-text-color: #fff;
+  --link-color: #eabe9e;
 }
 * {
   padding: 0;
@@ -11,6 +12,7 @@ body,
 html,
 #root {
   height: 100%;
+  font-family: 'Helvetica Neue', 'Gilroy ExtraBold', Times, serif;
 }
 
 h1 {
@@ -68,52 +70,4 @@ h3 {
 .demo-sortable-grid {
   padding: 32px 40px;
   margin: 24px;
-}
-
-.pivot-code-box {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  margin: 16px 0;
-  overflow: hidden;
-  border: 1px solid rgba(5, 5, 5, 0.06);
-  border-radius: 6px;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  &-actions {
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 4px 8px;
-    .pivot-code-box-icon {
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-  &-demo {
-    padding: 24px 30px;
-    display: flex;
-    border-bottom: 1px solid rgba(5, 5, 5, 0.06);
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    > :not(.PIVOT-draggable-item) {
-      margin: 0 24px;
-    }
-  }
-
-  .line-numbers {
-    //width: 100%;
-    .code-toolbar {
-      .data-prismjs-copy {
-        //width: 70vw;
-        //width: 100%;
-        overflow: auto;
-      }
-    }
-  }
 }
