--- a/packages/demo/index.scss
+++ b/packages/demo/index.scss
@@ -2,6 +2,7 @@
   --master-bg-color: rgb(252, 234, 220);
   --master-deep-bg-color: #c76591;
   --master-text-color: #fff;
+  --primary: #1677ff;
   --link-color: #eabe9e;
 }
 * {
@@ -12,40 +13,9 @@ body,
 html,
 #root {
   height: 100%;
-  font-family: 'Helvetica Neue', 'Gilroy ExtraBold', Times, serif;
+  font-family: 'ptima-Regular', 'Gilroy ExtraBold', Times, serif;
 }
 
-h1 {
-  padding-bottom: 20px;
-}
-h2 {
-  position: relative;
-  margin: 16px 0;
-  padding: 0 16px;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 4px;
-    height: 100%;
-    background-color: #1677ff;
-  }
-}
-h3 {
-  position: relative;
-  margin: 12px 0;
-  padding: 0 12px;
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 3px;
-    height: 100%;
-    background-color: #1677ff;
-  }
-}
 .display {
   height: auto;
 }
@@ -71,4 +41,3 @@ h3 {
   padding: 32px 40px;
   margin: 24px;
 }
-
