fix:fix review bugs

--- a/packages/demo/src/components/Popover/demo/index.scss
+++ b/packages/demo/src/components/Popover/demo/index.scss
@@ -1,21 +1,23 @@
-.center {
+@import '../../common.scss';
+
+.#{$prefix}-center {
   display: flex;
   justify-content: center;
   width: 100%;
   div {
     margin: 20px;
-    padding: 5px 15px;
+    padding: 3px 15px;
     border: 1px solid black;
   }
 }
 
-.space {
+.#{$prefix}-space {
   display: flex;
   justify-content: space-between;
   width: 100%;
   div {
     margin: 20px;
-    padding: 5px 15px;
+    padding: 3px 15px;
     border: 1px solid black;
     text-align: center;
   }
