--- a/packages/design/components/Popover/index.scss
+++ b/packages/design/components/Popover/index.scss
@@ -10,9 +10,10 @@
   z-index: 2;
   color: white;
   background-color: rgba($color: #000000, $alpha: 0.9);
-  padding: 6px 8px;
+  padding: 9px 10px;
   border-radius: 6px;
   transition: opacity 0.3s;
+  font-size: 14px;
 
   ::before {
     content: '';
