--- a/packages/demo/src/pages/home/index.scss
+++ b/packages/demo/src/pages/home/index.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     padding: 30px 20px 0;
     z-index: 100;
+    background-color: #fff;
     .title {
       transform: translate3d(0, -18px, 0);
       width: 200px;
