--- a/packages/design/components/Modal/index.scss
+++ b/packages/design/components/Modal/index.scss
@@ -1,9 +1,13 @@
 @import '../common.scss';
 .#{$prefix}-modal {
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
  position: fixed;
  width: 100%;
  top: 0;
  bottom: 0;
+ z-index: 999;
  right: 0;
  overflow: auto;
  &.#{$prefix}-modal-mask {
@@ -14,16 +18,21 @@
   position: absolute;
   left: 50%;
   top: 50%;
+ // bottom: 0;
+  //right: 0;
+ // margin: auto;
   height: auto;
   width: 520px;
   border-radius: 6px;
-  transform: translate(-50%, -50%);
+ transform: translate(0, 0);
   -webkit-transform: translate(-50%, -50%);
   background: white;
   .#{$prefix}-modal-cancel {
    position: absolute;
-   right: 0;
-   top: 0;
+   right: 10px;
+   top: 10px;
+   z-index: 9999;
+   
   }
   .#{$prefix}-modal-title {
     margin-bottom: 15px;
@@ -35,15 +44,16 @@
   }
   .#{$prefix}-modal-footer {
     position: relative;
-    margin-top: 20px;
+    margin-top: 15px;
     .#{$prefix}-modal-col-footer{
       // position: absolute;
           padding-left: 50%;
           transform: translate(-20%, 0);
     }
     .#{$prefix}-modal-row-footer {
-      position: relative;
-      float: right;
+      display:flex;
+      justify-content:flex-end;
+      flex-wrap: nowrap;
     
     }
   }
