Feat multicontainer sortable (#26)
* chore: provide node insteadof index in onDragEnd

* feat: [sortable]add Data in DraggableNode type

* feat: multipleContainer init

* feat: collision&droppable change, add containerId

* feat: setItems while move to newcontainer

* feat: 🌟clientRect initialize in useDraggable

* feat: clientRect update in pointerStart

* fix: pointermove invaild when into newContainer

* feat: multiple container sortable with some bugs

* feat: activeNode Rect invariable

* chore: remove

* refactor: :hammer:basic&single container sortable

* refactor: :hammer:remove useless&fix types

* feat: multiple container sortable(vertical)

* style: multiple container sortable vertically

* chore: debug

* fix: 多容器拖拽,Node data不更新的bug

---------

Co-authored-by: 1360151219 <zhanjingxi@ps.ink>

--- a/packages/design/components/common.scss
+++ b/packages/design/components/common.scss
@@ -24,6 +24,10 @@ body {
   --pivot-card-background-color: var(--Gray-5);
 }
 
+.__#{$prefix}_hidden {
+  opacity: 0;
+  visibility: hidden;
+}
 // body {
 //   --pivot-primary: $pivot-violet;
 //   --pivot-secondary: $pivot-gray-600;
