--- a/packages/demo/src/pages/component/index.scss
+++ b/packages/demo/src/pages/component/index.scss
@@ -1,9 +1,10 @@
 .pivot-design-docs {
   padding: 20px;
-  background-color: #f7f9fb;
+  background-color: rgb(20, 20, 20);
   min-height: 100%;
   display: flex;
   flex-direction: column;
+
   &-title {
     .title {
       font-size: 30px;
@@ -12,23 +13,21 @@
   &-content {
     display: flex;
     flex-direction: row;
-    padding: 12px 0;
-    margin-top: 50px;
+    padding: 82px 16px 12px;
+    height: 100%;
+    color: #fff;
+
     .demo-container {
       width: 10%;
-      min-width: 100px;
       height: 100%;
       padding-top: 8px;
       padding-right: 20px;
-      margin-left: 5px;
       display: flex;
       align-items: center;
       flex-direction: column;
-      position: sticky;
-      top: 80px;
       .demo-item {
         // background-color: bisque;
-        border: 1px solid rgba(0, 0, 0, 0.056);
+        border: 1px solid rgba(209, 208, 208, 0.649);
         padding: 0.1rem 0;
         width: 100%;
         text-align: center;
@@ -43,11 +42,172 @@
     }
     .demo-component {
       padding: 48px 48px 0;
-      background-color: #fff;
+      background-color: rgb(20, 20, 20);
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       box-shadow: 0 8px 24px #0000000d;
       flex: 1;
     }
   }
+}
+
+#nice {
+  padding: 40px 100px;
+  word-break: break-all;
+}
+#nice p {
+}
+/* 一级标题 */
+#nice h1 {
+  padding-bottom: 20px;
+}
+/* 一级标题修饰 请参考有实例的主题 */
+#nice h1:after {
+}
+/* 二级标题 */
+
+#nice h2 {
+  position: relative;
+  margin: 16px 0;
+  padding: 0 16px;
+  font-weight: 400;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4px;
+    height: 100%;
+    background-color: #1677ff;
+  }
+}
+
+#nice h3 {
+  position: relative;
+  margin: 12px 0;
+  margin-left: 0.8em;
+  padding: 0 12px;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 3px;
+    height: 100%;
+    background-color: #1677ff;
+  }
+}
+/* 无序列表整体样式
+ * list-style-type: square|circle|disc;
+ */
+#nice ul {
+}
+#nice ul li::marker {
+  color: rgb(239, 112, 96);
+}
+/* 有序列表整体样式
+ * list-style-type: upper-roman|lower-greek|lower-alpha;
+ */
+#nice ol {
+}
+/* 列表内容，不要设置li
+ */
+#nice li section {
+}
+/* 引用
+ * 左边缘颜色 border-left-color: black;
+ * 背景色 background: gray;
+ */
+#nice .multiquote-1 {
+  border-left-color: rgb(239, 112, 96);
+  background: #fff9f9;
+}
+/* 引用文字 */
+#nice .multiquote-1 p {
+}
+/* 链接 
+ * border-bottom: 1px solid #009688;
+ */
+#nice a {
+  color: rgb(239, 112, 96);
+  border-bottom: 1px solid rgb(239, 112, 96);
+}
+/* 加粗 */
+#nice strong {
+}
+/* 斜体 */
+#nice em {
+}
+/* 加粗斜体 */
+#nice em strong {
+}
+/* 删除线 */
+#nice del {
+}
+/* 分隔线
+ * 粗细、样式和颜色
+ * border-top: 1px solid #3e3e3e;
+ */
+#nice hr {
+}
+/* 图片
+ * 宽度 width: 80%;
+ * 居中 margin: 0 auto;
+ * 居左 margin: 0 0;
+ */
+#nice img {
+}
+/* 图片描述文字 */
+#nice figcaption {
+}
+/* 行内代码 */
+#nice p code,
+#nice li code {
+  color: rgb(239, 112, 96);
+}
+/* 非微信代码块
+ * 代码块不换行 display: -webkit-box !important;
+ * 代码块换行 display: block;
+ */
+#nice pre code {
+}
+/*
+ * 表格内的单元格
+ * 字体大小 font-size: 16px;
+ * 边框 border: 1px solid #ccc;
+ * 内边距 padding: 5px 10px;
+ */
+#nice table tr th,
+#nice table tr td {
+}
+/* 脚注文字 */
+#nice .footnote-word {
+  color: #ff3502;
+}
+/* 脚注上标 */
+#nice .footnote-ref {
+  color: rgb(239, 112, 96);
+}
+/* "参考资料"四个字 
+ * 内容 content: "参考资料";
+ */
+#nice .footnotes-sep:before {
+}
+/* 参考资料编号 */
+#nice .footnote-num {
+}
+/* 参考资料文字 */
+#nice .footnote-item p {
+}
+/* 参考资料解释 */
+#nice .footnote-item p em {
+}
+/* 行间公式
+ * 最大宽度 max-width: 300% !important;
+ */
+#nice .block-equation svg {
+}
+/* 行内公式
+ */
+#nice .inline-equation svg {
 }
