--- a/packages/demo/src/components/_CodeBlock/index.scss
+++ b/packages/demo/src/components/_CodeBlock/index.scss
@@ -1,8 +1,7 @@
 .pivot-code-box {
   position: relative;
   display: inline-block;
-  width: 100%;
-  margin: 16px 0;
+  margin: 30px 0;
   overflow: hidden;
   border: 1px solid rgba(243, 242, 242, 0.1);
   border-radius: 6px;
@@ -30,11 +29,9 @@
   }
 
   .line-numbers {
-    //width: 100%;
     .code-toolbar {
       .data-prismjs-copy {
-        //width: 70vw;
-        //width: 100%;
+        font-size: 12px;
         overflow: auto;
         margin: 0;
       }
