--- a/packages/demo/src/pages/component/index.scss
+++ b/packages/demo/src/pages/component/index.scss
@@ -13,53 +13,55 @@
   &-content {
     display: flex;
     flex-direction: row;
-    padding: 82px 16px 12px;
-    height: 100%;
+    padding: 60px 0;
     color: #fff;
 
     .demo-container {
-      width: 10%;
-      height: 100%;
+      background: #332b3e;
+      width: 220px;
       padding-top: 8px;
-      padding-right: 20px;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
       .demo-item {
         // background-color: bisque;
         border: 1px solid rgba(209, 208, 208, 0.649);
         padding: 0.1rem 0;
-        width: 100%;
         text-align: center;
         cursor: pointer;
 
         &.active {
-          color: #1677ff;
+          color: var(--primary);
           font-weight: 500;
           font-size: 18px;
         }
       }
     }
     .demo-component {
-      padding: 48px 48px 0;
+      margin: 0;
+      padding: 48px 60px 0 48px;
       background-color: rgb(20, 20, 20);
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       box-shadow: 0 8px 24px #0000000d;
       flex: 1;
     }
+    .demo-component-catalogue {
+      background-color: rgb(20, 20, 20);
+    }
   }
 }
 
 #nice {
-  padding: 40px 100px;
+  color: var(--text-color-3);
+
   word-break: break-all;
 }
 #nice p {
+  font-size: 16px;
+  line-height: 1.8;
 }
 /* 一级标题 */
 #nice h1 {
-  padding-bottom: 20px;
+  color: var(--text-color-1);
+  padding-bottom: 60px;
 }
 /* 一级标题修饰 请参考有实例的主题 */
 #nice h1:after {
@@ -68,9 +70,11 @@
 
 #nice h2 {
   position: relative;
-  margin: 16px 0;
+  margin: 40px 0;
   padding: 0 16px;
   font-weight: 400;
+  font-size: 20px;
+  color: var(--text-color-2);
   &::before {
     content: '';
     position: absolute;
@@ -78,15 +82,16 @@
     top: 0;
     width: 4px;
     height: 100%;
-    background-color: #1677ff;
+    background-color: var(--primary);
   }
 }
 
 #nice h3 {
   position: relative;
-  margin: 12px 0;
+  margin: 32px 0;
   margin-left: 0.8em;
   padding: 0 12px;
+  font-size: 18px;
   &::before {
     content: '';
     position: absolute;
@@ -94,16 +99,21 @@
     top: 0;
     width: 3px;
     height: 100%;
-    background-color: #1677ff;
+    background-color: var(--primary);
   }
 }
 /* 无序列表整体样式
  * list-style-type: square|circle|disc;
  */
 #nice ul {
+  margin: 20px 1rem;
 }
 #nice ul li::marker {
   color: rgb(239, 112, 96);
+}
+#nice ul li {
+  text-indent: 0.5rem;
+  line-height: 2;
 }
 /* 有序列表整体样式
  * list-style-type: upper-roman|lower-greek|lower-alpha;
@@ -163,7 +173,9 @@
 /* 行内代码 */
 #nice p code,
 #nice li code {
-  color: rgb(239, 112, 96);
+  padding: 1px 2px;
+  background: var(--fill-color-1);
+  color: var(--primary);
 }
 /* 非微信代码块
  * 代码块不换行 display: -webkit-box !important;
