--- a/packages/design/components/Draggable/components/Draggable/DraggableItem.scss
+++ b/packages/design/components/Draggable/components/Draggable/DraggableItem.scss
@@ -1,5 +1,4 @@
-@import '../../../common.scss';
-
+@import '../../../constants.scss';
 .#{$prefix}-draggable-item {
   position: relative;
   top: 0;
