--- a/packages/design/components/common.scss
+++ b/packages/design/components/common.scss
@@ -1,4 +1,3 @@
-$prefix: 'PIVOT';
 * {
   padding: 0;
   margin: 0;
@@ -15,6 +14,14 @@ body[pivot-theme='light'] {
   --Brand-5: #2d895f;
 }
 body[pivot-theme='dark'] {
+  --Gray-100: rgba(255, 255, 255, 0.87);
+  --Gray-80: rgba(203, 203, 203, 1);
+  --Gray-5: rgba(255, 255, 255, 0.87);
+  --Brand-1-100: rgba(75, 159, 121, 1);
+  --Brand-1-75: rgba(75, 159, 121, 0.75);
+  --Brand-1-50: rgba(75, 159, 121, 0.5);
+  --Brand-1-25: rgba(75, 159, 121, 0.25);
+  --Brand-5: #2d895f;
 }
 
 body {
