--- a/packages/demo/src/pages/home/index.scss
+++ b/packages/demo/src/pages/home/index.scss
@@ -1,8 +1,7 @@
 .pivot-design-home {
-  // background-color: var(--master-bg-color);
   position: relative;
   min-height: 300%;
-  background: linear-gradient(60deg, #332051 0%, #000000 100%);
+  background: linear-gradient(60deg, var(--semi-color-bg-0) 0%, var(--semi-color-black) 100%);
   background-attachment: fixed;
   .pivot-design-home-title {
     position: fixed;
@@ -14,11 +13,11 @@
     align-items: center;
     padding: 12px 36px;
     z-index: 100;
-    background-color: #1c1721;
+    background-color: var(--semi-color-nav-bg);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     .title {
       font-size: 24px;
-      color: var(--text-color-1);
+      color: var(--semi-color-text-0);
     }
     .navigation-wrapper {
       display: flex;
@@ -29,13 +28,13 @@
         box-sizing: border-box;
         border-radius: 20px;
         text-decoration: none;
-        color: var(--link-color);
+        color: var(--semi-color-link);
         border: 1px solid;
         transition: 0.5s;
         &:hover {
-          border-color: adjust-hue(#ffa260, 45deg);
-          box-shadow: inset 0 0 0 2em adjust-hue(#ffa260, 45deg);
-          color: #000000;
+          border-color: adjust-hue(rgba(11, 103, 217, 1), -16deg);
+          box-shadow: inset 0 0 0 2em adjust-hue(rgba(11, 103, 217, 1), -16deg);
+          color: var(--semi-color-black);
         }
       }
     }
@@ -57,7 +56,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       display: flex;
-      color: var(--text-color-1);
+      color: var(--semi-color-text-0);
       font-size: 82px;
       font-weight: bold;
       letter-spacing: 0.1em;
@@ -70,12 +69,6 @@
           14px 14px rgba(115, 109, 85, 0.02), 0.625rem 0.625rem rgba(115, 109, 85, 0.02),
           16px 16px rgba(115, 109, 85, 0.02), 17px 17px rgba(115, 109, 85, 0.02), 18px 18px rgba(115, 109, 85, 0.02),
           19px 19px rgba(115, 109, 85, 0.02), 1.25rem 1.25rem rgba(115, 109, 85, 0.02);
-      }
-
-      @for $i from 0 through 11 {
-        .title_letter_#{$i} {
-          color: darken(#d89ddc, 3% * $i);
-        }
       }
     }
     .layer {
@@ -129,29 +122,6 @@
         width: 100%;
         text-align: center;
         font-size: 54px;
-      }
-    }
-  }
-  .home-item {
-    margin: 10vh 0;
-    min-height: 80vh;
-    width: 100%;
-    background-color: var(--master-bg-color);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    &-feature {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      svg {
-        &:hover {
-          box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-        }
-        height: 400px;
-        width: 400px;
       }
     }
   }
