feat: 拖拽组件使用semi色值

--- a/packages/demo/src/components/Draggable/demo/GridSortable.scss
+++ b/packages/demo/src/components/Draggable/demo/GridSortable.scss
@@ -17,8 +17,8 @@
     }
   }
   .demo-sortable-item {
-    background-color: #6193f0;
-    color: #fff;
+    background-color: var(--semi-color-primary);
+    color: var(--semi-color-white);
     text-align: center;
     padding: 12px 0;
     margin: 8px 0;
