--- a/packages/demo/src/components/Draggable/demo/HorizenSortable.scss
+++ b/packages/demo/src/components/Draggable/demo/HorizenSortable.scss
@@ -3,7 +3,6 @@
   width: 100%;
   justify-content: center;
   align-items: center;
- 
 
   &.__demo-sortable-horizen {
     justify-content: space-around;
@@ -12,10 +11,9 @@
     }
   }
 
- 
   .demo-sortable-item {
-    background-color: #6193f0;
-    color: #fff;
+    background-color: var(--semi-color-primary);
+    color: var(--semi-color-white);
     text-align: center;
     padding: 12px 0;
     margin: 8px 0;
