--- a/packages/demo/src/components/Draggable/demo/VerticalSortable.scss
+++ b/packages/demo/src/components/Draggable/demo/VerticalSortable.scss
@@ -9,8 +9,8 @@
 
   .demo-sortable-item {
     width: 50%;
-    background-color: #6193f0;
-    color: #fff;
+    background-color: var(--semi-color-primary);
+    color: var(--semi-color-white);
     text-align: center;
     padding: 12px 0;
     margin: 8px 0;
