--- a/packages/demo/src/components/Draggable/demo/WithDragOverlay.scss
+++ b/packages/demo/src/components/Draggable/demo/WithDragOverlay.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   background-color: black;
-  color: #fff;
+  color: var(--semi-color-white);
   border-radius: 50%;
   padding: 20px 12px;
   box-shadow: 6px 7.3px 2.7px rgba(0, 0, 0, 0.016), 8.1px 9.8px 6.9px rgba(0, 0, 0, 0.018),
